option(
  'jank_build_type',
  type : 'string',
  value : 'release',
  description : 'Build mode to use (debug, release)'
)
option(
  'cling_include_path',
  type : 'string',
  description : 'Path to include directory for cling'
)
option(
  'cling_lib_path',
  type : 'string',
  description : 'Path to lib directory for cling'
)
option(
  'llvm_include_path',
  type : 'string',
  description : 'Path to include directory for the LLVM installation'
)
option(
  'llvm_root_path',
  type : 'string',
  description : 'Path to root resource directory for the LLVM installation'
)
